src/python_tb/75/run_info_py.txt
python compilation failed!

###output:


###error:
  File "/Users/zhaozhaozhaozhao/Unambigious_prompt/exp/output_tb_gen_tb_20250319/75/pychecker_4.py", line 60
    outputs.append({'start_shifting': f"{self.start_shifting:01b"})
                                                                 ^
SyntaxError: f-string: expecting '}'
